# julia-set

./: .gitignore  Cargo.toml  README.md  animation-steps.csv
src/: bin.rs  colorize.rs  iter.rs  lerp.rs  lib.rs  main.rs
