[package]
name = "julia_set"
version = "0.5.2"
authors = ["coriolinus <coriolinus@gmail.com>"]

[[bin]]
name = "julia-set"
doc = false

[[bin]]
name = "tiled"
path = "src/bin/tiled.rs"

[[bin]]
name = "animate"
path = "src/bin/animate.rs"

[dependencies]
clap = "2.10.0"
csv = "0.14"
crossbeam = "0.2"
hsl = "0.1.1"
image = "0.10.1"
lerp = "0.1"
num = "0.1.34"
